# NeurogridCTF_2025_Writeups

./: .claudeignore  .gitignore  README.md
challs_finished/Blade_Master/: PREVIOUS_ATTEMPT.md  README.md  WRITEUP.md  optimized_solution.py  solution  solution.cpp  solution_debug  solution_directed  submit.py  test1.txt  test2.txt  test3.txt  working_solution_slow.py
challs_finished/Codex_of_Failures/: README.md  SOLUTION.md  errno_hook_v2.c  extract_final_key.py  parse_function_table.py
challs_finished/Coordinator/: ATTEMPT.md  README.md  SESSION_SUMMARY.md  WRITEUP.md  analyze_corruption.py  samples_fresh.json  solve_coordinator_lll.py  solve_coordinator_z3.py  test_root_selection.py  verify_state.py
challs_finished/Dathash_or_Not_Dathash/: README.md  WRITEUP.md  solution.sage
challs_finished/Drumming Shrine/: ANALYSIS.md  README.md  WRITEUP.md  solve.py
challs_finished/Elliptic Contribution/: README.md  WRITEUP.md  exploit.py
challs_finished/Fivefold Door/: README.md  WRITEUP.md  analyze.md  flag.txt  solution.py
challs_finished/ForgottenVault/: README.md  WRITEUP.md  calculate_pin.py  decrypt_flag_v2.py
challs_finished/FuseJi_book/: README.md  WRITEUP.md  prompt_injection_exploit.py
challs_finished/IronheartEcho/: README.md  WRITEUP.md
challs_finished/Lanternfall/: ATTEMPT.md  BLOCKERS.md  README.md  WRITEUP.md  final_exploit.py  forge_admin_token.py
challs_finished/Shugo_No_Michis_System/shugos/challenge/app/data_parser/: CMakeLists.txt
challs_finished/Shugo_No_Michis_System/shugos/challenge/app/data_parser/src/: env.cpp  env.h  main.cpp
(+505 files in other folders)
